# unbeatable-tic-tac-toe

./: README.md
client/: index.html
client/src/: App.css  App.tsx  index.css
client/src/api/: calculateMoves.ts
server/: Cargo.toml
server/src/: main.rs
